# binred

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp  webserver.cpp
src/calc/: cast_ptr.h  get_const.h  trace_expr.h
src/commonlib/: callback.h  callback_invoker.h  channel.h  coutwrapper.h  enumext.h  optmap.h  subcommand.h  utf_helper.h
src/commonlib/syntax/: syntax.h  syntax_bin.h  syntax_matcher.h  syntax_parser.h
src/commonlib/tokenparser/: token_bin.h  tokendef.h  tokenparser.h
src/output/: output_context.h
src/output/common/: get_alias_type.h  make_lambda.h
src/output/common/analisis/: resolve_names.h  sort_element.h
src/output/cpp/: add_error_enum.h  alias_to_enum.h  cargo_to_struct.h  code_element.h  format_alias_and_cargo.h  output_context.h
src/output/cpp/analisis/: sort_element.h
src/parse/: alias.h  cargo.h  element.h  macro.h  parse.h  parse_alias.h  parse_cargo.h  parse_macro.h  parser.h  record.h  tree.h
src/parse/parser/: parse.h  parse_alias.h  parse_cargo.h  parse_command.h  parse_io.h  parse_macro.h  parse_read.h  parse_tree.h  parse_types.h  parser.h  tree.h
src/parse/parser/syntax/: callback.h  generate_code.h  syntax_match.h  syntax_matcher.h  syntax_parser.h
src/parse/struct/: alias.h  cargo.h  command.h  complex.h  element.h  io.h  macro.h  param.h  read.h  record.h  tree.h
src/syntax/: callback.h  syntax.h  syntax_matcher.h  syntax_parser.h
src/syntax_file/: syntax.txt  test_syntax.txt  test_syntax2.txt
src/syntax_rule/: set_by_syntax.h  stmt.h  stmt_parse.h
